{
  "version": 4,
  "terraform_version": "0.14.8",
  "serial": 8,
  "lineage": "5ead3fc1-e767-4b8e-e700-b86229b0a312",
  "resources": [
    {
      "module": "module.rds_instance",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:720758062081:security-group/sg-0ce2814d933a6677b",
            "description": "Allow inbound traffic from the security groups",
            "egress": [],
            "id": "sg-0ce2814d933a6677b",
            "ingress": [],
            "name": "symbiosis-dev-rds",
            "name_prefix": "",
            "owner_id": "720758062081",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "symbiosis-dev-rds",
              "Namespace": "symbiosis",
              "Stage": "dev"
            },
            "tags_all": {
              "Name": "symbiosis-dev-rds",
              "Namespace": "symbiosis",
              "Stage": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-046b1ecd264f43af1"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.rds_instance",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress traffic",
            "from_port": 0,
            "id": "sgrule-831907366",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0ce2814d933a6677b",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.rds_instance.aws_security_group.default"
          ]
        }
      ]
    },
    {
      "module": "module.rds_instance",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "192.168.128.0/18",
              "192.168.192.0/18"
            ],
            "description": "Allow inbound traffic from CIDR blocks",
            "from_port": 3306,
            "id": "sgrule-89791727",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0ce2814d933a6677b",
            "self": false,
            "source_security_group_id": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.rds_instance.aws_security_group.default"
          ]
        }
      ]
    }
  ]
}